repair spacing mobile location address bar

--- a/resources/index.css
+++ b/resources/index.css
@@ -163,7 +163,6 @@ li {
 		width: 80%;
 		border-radius: 25px;
 		padding: 5px;
-		padding-top: 7px;
 		border: 2px solid #b9cce4;
 		text-align: center;
 	}
